# dlwrap

./: Cargo.toml  GNUmakefile  README.md
.github/workflows/: rust.yml
examples/: zstdver.c
fixtures/: array.h  clock_gettime.c
src/: lib.rs  main.rs
src/dlwrap/: mod.rs
templates/: loader.c.in  loader.c.template  loader.h.in  loader.h.template
