[package]
name = "dlwrap"
description = "dlopen wrapper code generator"
repository = "https://github.com/ueno/dlwrap"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Daiki Ueno"]

[dependencies]
anyhow = "1"
clap = { version = "4", features=["derive"] }
clang = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "dlwrap"
path = "src/main.rs"
doc = false

[lib]
name = "dlwrap"
path = "src/lib.rs"
