[package]
name = "dlwrap"
description = "dlopen wrapper code generator"
repository = "https://github.com/ueno/dlwrap"
version = "0.3.6"
edition = "2021"
license = "Apache-2.0"
authors = ["Daiki Ueno"]

[dependencies]
anyhow = "1"
clap = { version = "4", features=["derive"] }
clang = { version = "2", features=["clang_7_0"] }
clang-sys = { version = "1", features=["clang_7_0"] }
regex = "1"

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[[bin]]
name = "dlwrap"
path = "src/main.rs"
doc = false

[lib]
name = "dlwrap"
path = "src/lib.rs"
